# corollary

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  buildall.sh  lhs-strip.rs  me.rs  out.rs  scanall.rs  temp.hs  temp.txt  test.hs  test2.hs  wow.rs
corollary/: Cargo.toml  partial_generator.rs  scanall.rs
corollary-support/: Cargo.toml
corollary-support/src/: lib.rs
corollary/src/: convert.rs  haskell_support.txt  lib.rs  main.rs
corollary/test/: hello.hs  issue-31.hs  issue-36.hs  issue-43.hs  issue-47.hs  issue-52.hs  rlist.hs  struct.hs  tell.hs
corollary/test/todo/: input.hs  lambda-greedy.hs
etc/: check.rs  regen.rs
parser/: Cargo.toml  build.rs
parser-c/: Cargo.toml  compile-haskell.sh  compile.sh  expand.rs  regen.rs
parser-c/parser-c-macro/: Cargo.toml
parser-c/parser-c-macro/src/: lib.rs
parser-c/src/: lib.rs
parser-c/src/analysis/: ast_analysis.rs  builtins.rs  const_eval.rs  debug.rs  decl_analysis.rs  def_table.rs  export.rs  mod.rs  name_space_map.rs  sem_error.rs  sem_rep.rs  trav_monad.rs  type_check.rs  type_conversions.rs  type_utils.rs
parser-c/src/data/: error.rs  ident.rs  input_stream.rs  mod.rs  name.rs  node.rs  position.rs  r_list.rs
parser-c/src/parser/: builtin.rs  lexer.rs  lexer_real.rs  mod.rs  parser.rs  parser_monad.rs  parser_real.rs  tokens.rs
parser-c/src/syntax/: ast.rs  constants.rs  gcc.rs  mod.rs  ops.rs  preprocess.rs  utils.rs
parser-haskell/: .gitignore  Cargo.toml  build.rs
parser-haskell/src/: ast.rs  calculator.lalrpop  conv.rs  haskell.lalrpop  lib.rs  trans.rs  whitespace.rs
parser/src/: ast.rs  calculator.lalrpop  calculator.rs  lib.rs  util.rs
rust-corrode/: compile.sh
rust-corrode/src/: ast.rs  idiomatic.rs  mod.rs
rust-corrode/src/corrode/: c.rs  cfg.rs  crate_map.rs
rust-corrode/src/language/: rust.rs
rust-corrode/src/language/rust/: ast.rs  idiomatic.rs
rust-language-c/src/language/: c.rs
rust-language-c/src/language/c/: analysis.rs  data.rs  (+3 more)
src/: ast.rs  calculator.lalrpop  calculator.rs  convert.rs  ir.rs  lib.rs  main.rs
test/: case-test.hs  dot.hs  hello.hs  input.hs  issue-34.hs  issue-36.hs  issue-41.hs  issue-44.hs  issue-47.hs  issue-49.hs  let-toplevel.hs  underscore.hs
test/scripts/: hello.hs
(+35 files in other folders)
