[package]
name = "corollary"
version = "0.1.0"
authors = [
  "Tim Ryan <tim@timryan.org>",
  "Paul Collier <paul@paulcollier.ca>"
]
description = "Cross-compiles Haskell into Rust."
repository = "http://github.com/tcr/corrode-but-in-rust"
homepage = "http://github.com/tcr/corrode-but-in-rust"
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.24"
errln = "0.1.0"
hex = "0.2.0"
lalrpop-util = "0.12.5"
maplit = "*"
regex = "0.2.1"
tempdir = "0.3"
walkdir = "1"

[dependencies.parser-haskell]
path = "./parser-haskell"

[workspace]
